--- a/CodePlayground.GradientDescent.Algorithm/CodePlayground.GradientDescent.Algorithm.csproj
+++ b/CodePlayground.GradientDescent.Algorithm/CodePlayground.GradientDescent.Algorithm.csproj
@@ -1,10 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>CodePlayground.GradientDescent.Algorithm</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    </ItemGroup>
 
 </Project>
